Project Page Update
Reworked CSS Styling
Updated Project page
Updated resources page

--- a/View3/views/pages/homepage.ejs
+++ b/View3/views/pages/homepage.ejs
@@ -3,14 +3,14 @@
       <!-- Sections -->
       <section class="row">
           <!-- Header Section -->
-          <div class="col-md-2">
+          <div class="col-md-2 g-3">
               <img src="./images/milesgriffith.png" alt="Miles Griffith" class="img-fluid" style="height:250px; margin-right:10px;">
               <p class="mb-0">
                   <strong>Miles Griffith</strong><br>
                   <a href="mailto:miles.griffith@bellevuecollege.edu">miles.griffith@bellevuecollege.edu</a>
               </p>
           </div>
-          <div class="col-md-10">
+          <div class="col-md-9">
               <!-- Bio Section -->
               <div>
                   <h2 class="h5"><strong>Bio</strong></h2>
