--- a/View3/views/pages/project.ejs
+++ b/View3/views/pages/project.ejs
@@ -1,3 +1,16 @@
-<main>
-    <p>Project Details Coming soon</p>
-</main>
+<div class="container">
+    <div class="row">
+        <div class="col-md-6">
+            <h1>Project</h1>
+            <p>
+                This quarter my group <em>TheMiddles</em> decided to make an app called E-Voter.
+            </p>
+        </div>
+        <div class="col-md-6">
+            <h2>My Role</h2>
+            <p>
+                For this project i've primarily been working on technical documentation and coding varous features of the project
+            </p>
+        </div>
+    </div>
+</div>
