--- a/View3/views/layouts/layout.ejs
+++ b/View3/views/layouts/layout.ejs
@@ -9,48 +9,42 @@
     <title>Miles Griffith - Software Development Student</title>
 
     <!-- Bootstrap 3 CSS -->
-    <link rel="stylesheet" href="./styles/bootstrap.min.css">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
-    <!-- Internal CSS -->
-    <link rel="stylesheet" href="./styles/style.css">
+    <link rel="stylesheet" href="/styles/bootstrap.min.css">
 </head>
   <body>
     <header>
-      <nav class="navbar navbar-expand-lg navbar-light bg-light">
-          <a class="navbar-brand" href="./"><img src="./images/favicon-32x32.png" alt="MG"></a>
+      <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="/">Miles Griffith</a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
               aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarNav">
               <ul class="navbar-nav">
-                <li class="nav-item active">
-                    <a class="nav-link" href="./">Home</a>
+                <li class="nav-item">
+                    <a class="nav-link" href="/">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="./resources">Resources</a>
+                    <a class="nav-link" href="/resources">Resources</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="./project">Group Project</a>
+                    <a class="nav-link" href="/project">Group Project</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="./http-server">http-server</a>
+                    <a class="nav-link" href="/http-server">http-server</a>
                 </li>
                 <!--<li class="nav-item">
                     <a class="nav-link" href="./legacy">Old Page</a>
                 </li>-->
               </ul>
           </div>
+        </div>
       </nav>
     </header>
 
     <%- body %>
 
-    <!-- jQuery -->
-    <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
-    <!-- Popper.js -->
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"></script>
-    <!-- Bootstrap JS -->
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <script src="/scripts/bootstrap.min.js"></script>
   </body>
 </html>
