--- a/View3/views/pages/homepage.ejs
+++ b/View3/views/pages/homepage.ejs
@@ -3,7 +3,7 @@
       <!-- Sections -->
       <section class="row">
           <!-- Header Section -->
-          <div class="col-md-2 g-3">
+          <div class="col-md-3">
               <img src="./images/milesgriffith.png" alt="Miles Griffith" class="img-fluid" style="height:250px; margin-right:10px;">
               <p class="mb-0">
                   <strong>Miles Griffith</strong><br>
