--- a/View3/views/layouts/layout.ejs
+++ b/View3/views/layouts/layout.ejs
@@ -42,9 +42,9 @@
         </div>
       </nav>
     </header>
-
-    <%- body %>
-
-    <script src="/scripts/bootstrap.min.js"></script>
+    <div class="container mt-4">
+      <%- body %>
+    </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
