--- a/View3/views/layouts/layout.ejs
+++ b/View3/views/layouts/layout.ejs
@@ -23,9 +23,6 @@
           <div class="collapse navbar-collapse" id="navbarNav">
               <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" href="/">Home</a>
-                </li>
-                <li class="nav-item">
                     <a class="nav-link" href="/resources">Resources</a>
                 </li>
                 <li class="nav-item">
@@ -45,6 +42,13 @@
     <div class="container mt-4">
       <%- body %>
     </div>
+    <footer class="bg-dark text-white py-4 mt-5">
+      <div class="container">
+        <div class="text-center mt-4">
+          <p>&copy; 2025 Miles Griffith</p>
+        </div>
+      </div>
+    </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
