--- a/View3/views/pages/homepage.ejs
+++ b/View3/views/pages/homepage.ejs
@@ -4,7 +4,7 @@
       <section class="row">
           <!-- Header Section -->
           <div class="col-md-3">
-              <img src="./images/milesgriffith.png" alt="Miles Griffith" class="img-fluid" style="height:250px; margin-right:10px;">
+              <img src="./images/milesgriffith.png" alt="Miles Griffith" class="img-fluid rounded" style="height:250px; margin-right:10px;">
               <p class="mb-0">
                   <strong>Miles Griffith</strong><br>
                   <a href="mailto:miles.griffith@bellevuecollege.edu">miles.griffith@bellevuecollege.edu</a>
