--- a/View3/views/layouts/layout.ejs
+++ b/View3/views/layouts/layout.ejs
@@ -8,15 +8,15 @@
     <meta name="keywords" content="Miles Griffith, Software Development, Bellevue College, Biography, Education, Experience">
     <title>Miles Griffith - Software Development Student</title>
 
-    <!-- Bootstrap 3 CSS -->
-    <link rel="stylesheet" href="/styles/bootstrap.min.css">
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css">
 </head>
   <body>
     <header>
       <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
             <a class="navbar-brand" href="/">Miles Griffith</a>
-          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
               aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
           </button>
@@ -31,9 +31,9 @@
                 <li class="nav-item">
                     <a class="nav-link" href="/http-server">http-server</a>
                 </li>
-                <!--<li class="nav-item">
-                    <a class="nav-link" href="./legacy">Old Page</a>
-                </li>-->
+                <li class="nav-item">
+                    <a class="nav-link" href="http://mbgriffi.ddns.net:8080">Old Page</a>
+                </li>
               </ul>
           </div>
         </div>
@@ -42,13 +42,6 @@
     <div class="container mt-4">
       <%- body %>
     </div>
-    <footer class="bg-dark text-white py-4 mt-5">
-      <div class="container">
-        <div class="text-center mt-4">
-          <p>&copy; 2025 Miles Griffith</p>
-        </div>
-      </div>
-    </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
